tests/compile_time_tests/empty-enum.stderr
error: cannot derive `TagName` for empty enum types
 --> tests/compile_time_tests/empty-enum.rs:4:6
  |
4 | enum EmptyEnum {
  |      ^^^^^^^^^
